--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   },
   "dependencies": {
     "body-parser": "~1.15.2",
+    "compression": "^1.6.2",
     "contentful": "^3.8.0",
     "cookie-parser": "~1.4.3",
     "debug": "~2.3.3",
