--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "morgan": "~1.8.2",
     "node-sass-middleware": "^0.10.1",
     "pug": "^2.0.0-rc.2",
-    "serve-favicon": "~2.3.0"
+    "serve-favicon": "^2.4.3"
   },
   "engines": {
     "node": "6.9.1",
